--- a/test.html
+++ b/test.html
@@ -11,16 +11,16 @@
             <li id="3">banana</li>
         </ul>
         <ul id="pokemon">
-            <li>Pikachu</li>
-            <li>Charmander</li>
-            <li>Squirtle</li>
+            <li id="4">Pikachu</li>
+            <li id="5">Charmander</li>
+            <li id="6">Squirtle</li>
         </ul>
         <ul class="listes">
-            <li>Ichigo</li>
-            <li>Rukia</li>
-            <li>Toshiro</li>
+            <li id="7">Ichigo</li>
+            <li id="8">Rukia</li>
+            <li id="9">Toshiro</li>
         </ul>
     </body>
-        <script src="exercice-dom-2.js">
+        <script src="test.js">
     </script>
 </html> 
